# Microgrid-Project01

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  01_eda.ipynb 
src/microgrid_eda/: clean.py  io.py  metrics.py
src/microgrid_project01.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_clean.py  test_io.py
